--- a/SocialFashion.Web/Views/Account/ForgotPassword.cshtml
+++ b/SocialFashion.Web/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,7 @@
 ﻿@model SocialFashion.Web.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
+    Layout = "~/Views/Share/Layout.cshtml";
 }
 
 <div id="t3-content" class="t3-content col-xs-12 col-sm-8  col-md-9">
