--- a/SocialFashion.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/SocialFashion.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Forgot Password Confirmation";
+    Layout = "~/Views/Share/Layout.cshtml";
 }
 
 <div id="t3-content" class="t3-content col-xs-12 col-sm-8  col-md-9">
