--- a/SocialFashion.Web/Views/Account/RegisterSuccess.cshtml
+++ b/SocialFashion.Web/Views/Account/RegisterSuccess.cshtml
@@ -5,18 +5,22 @@
 }
 
 <div id="t3-content" class="t3-content col-xs-12 col-sm-8  col-md-9">
-    <div id="system-message-container">
-        <div id="system-message">
-            <div class="alert alert-message">
-                <a class="close" data-dismiss="alert">×</a>
+    <div class="t3-content-block">
 
-                <h4 class="alert-heading">Đăng ký tài khoản</h4>
-                <div>
-                    <p>Chúng tôi đã gửi 1 email vào email mà bạn đã đăng ký. Hãy vào xác thực tài khoản để hoàn thành quá trình đăng ký</p>
+        <div id="community-wrap" class="jomsocial-wrapper on-socialize ltr cRegister">
+            <div class="jomsocial">
+                <div class="outerpgbar"><div class="innerpgbar" style="width:100%;"></div></div>
+                <div id="system-message">
+                    <div class="alert alert-message">
+                        <a class="close" data-dismiss="alert">×</a>
+
+                        <h4 class="alert-heading">Đăng ký tài khoản</h4>
+                        <div>
+                            <p>Chúng tôi đã gửi 1 email vào email mà bạn đã đăng ký. Hãy vào xác thực tài khoản để hoàn thành quá trình đăng ký</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-
 </div>
