--- a/SocialFashion.Web/Views/Share/Layout.cshtml
+++ b/SocialFashion.Web/Views/Share/Layout.cshtml
@@ -91,7 +91,7 @@ margin-right:5px;
 <!-- Toolbar for Users -->
 
 	<div class="navbar-header pull-left">
-			<a class="navbar-brand hidden-xs" href="http://www.socialize.jomsocial.com"><img height="50" src="/Content/client/images/socialize-logo.png" alt="http://www.socialize.jomsocial.com logo"/></a>
+			<a class="navbar-brand hidden-xs" href="@Url.Action("Index","Home")"><img height="50" src="/Content/client/images/socialize-logo.png" alt="http://www.socialize.jomsocial.com logo"/></a>
 			</div>
 
 	<!-- Collect the nav links, forms, and other content for toggling -->
@@ -303,7 +303,7 @@ else
             <!-- Toolbar for Users -->
 
             <div class="navbar-header pull-left">
-                <a class="navbar-brand" href="http://www.socialize.jomsocial.com"><img height="50" src="/images/socialize-logo.png" alt="http://www.socialize.jomsocial.com logo"></a>
+                <a class="navbar-brand hidden-xs" href="@Url.Action("Login","Account")"><img height="50" src="/Content/client/images/socialize-logo.png" alt="http://www.socialize.jomsocial.com logo" /></a>
             </div>
 
             <!-- Login hidden on mobile -->
