--- a/SocialFashion.Web/Views/Share/Layout.cshtml
+++ b/SocialFashion.Web/Views/Share/Layout.cshtml
@@ -7,7 +7,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="title" content="Socialize Template - Responsive JomSocial Template" />
 	<meta name="generator" content="Joomla! - Open Source Content Management" />
-	<title>Mai Thanh Dat</title>
+	<title>Clothing social network</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="/Content/client//Content/client/components/com_community/assets/vendors/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css" />
 	<link href="/Content/client/components/com_community/assets/release/css/override.css" rel="stylesheet" type="text/css" />
